  * doc/upgrade.html: typo.

runit 0.13.0
Mon, 12 Jan 2004 14:39:38 +0000
  * doc/runscripts.html: use html named entities (thx Taj Khattra); add
    more contributed run scripts (thx Marek Bartnikowski, Thomas Schwinge).
  * svlogd.c: support sending log entries to remote host through udp,
    configurable through u and U lines in log dir config file; minor.
  * man/svlogd.8: adapt; document -tt option.
  * package/compile, package/install-man, package/upgrade: exit 1 on
    sub-shell failures.
  * man/runsv.8: fix typos (thx Christian Hammers).

runit 0.12.1
Tue, 18 Nov 2003 15:42:44 +0000
  * doc/runscripts: add pppd run script (with chpst) next to the ppp one.
  * man/chpst.8: typo.
  * etc/debian/3: test -r -> test -x (thx Alejandro Mery).
  * runsv.c: don't start new processes while collecting children.

runit 0.12.0
Wed, 29 Oct 2003 18:27:48 +0000
  * runsv.c: don't use EOVERFLOW as it is not standard (thx Christoph
    Scheurer).
  * reboot_system.h1, reboot_system.h2, tryreboot.c: new; test if reboot()
    function takes one or two arguments (solaris).
  * runit.c: fallthrough stage 3: re-get stderr; sync() before reboot().
  * uw_tmp.h1, uw_tmp.h2, tryuwtmp.c, tryuwtmpx.c: new; test for utmpx or
    utmp support.
  * utmpset.c: support systems with utmp or utmpx (solaris).
  * Makefile: adapt.
  * supports the solaris platform (thx Uffe Jakobsen).
  * doc/benefits.html, doc/index.html, doc/replaceinit.html,
    doc/runlevels.html, doc/useinit.html: default service directory is
    /var/service; minor.
  * etc/2, etc/debian/3, etc/freebsd/3, etc/macosx/StartupItems/runit,
    etc/openbsd/3, man/runsv.8, man/runsvchdir.8, man/runsvdir.8: default
    service directory is /var/service.
  * doc/runscripts.html: add more contributed run scripts (thx Tomasz
    Nidecki).

runit 0.11.2
Tue, 23 Sep 2003 10:15:32 +0200
  * doc/useinit.html, etc/macosx/StartupItems/runit: don't use /etc/runit/2
    when using runit service supervision with traditional init, use